--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,2 @@
-@if (user(); as userValue;) {@if} {<div>{{result()}}</div>
-<button (click)="tryLogin()">login</button>
+<app-login-button/>
+<router-outlet></router-outlet>
