--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,9 @@
 <app-login-button/>
 <app-game-list/>
+<!--@if (signedIn()) {-->
+<!--  <app-data-table/>-->
+<!--}-->
+<!--<table>-->
+<!--&lt;!&ndash;  tr>th{header}*3^^tr*3>td{cell}*3>table>tr*>th{innerHeader}*3^td{innerCell}*&ndash;&gt;-->
+<!--</table>-->
 <router-outlet></router-outlet>
