--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,2 @@
-<app-login-button/>
-<app-game-list/>
-<!--@if (signedIn()) {-->
-<!--  <app-data-table/>-->
-<!--}-->
-<!--<table>-->
-<!--&lt;!&ndash;  tr>th{header}*3^^tr*3>td{cell}*3>table>tr*>th{innerHeader}*3^td{innerCell}*&ndash;&gt;-->
-<!--</table>-->
+<app-header/>
 <router-outlet></router-outlet>
