--- a/frontend/src/app/pages/game-list/game-list.component.css
+++ b/frontend/src/app/pages/game-list/game-list.component.css
@@ -1,20 +1,17 @@
 .game-list {
+  width: 60rem;
   position: relative;
   list-style: none;
-  border: dashed red 1px;
-  width: 100%;
   display: flex;
   justify-content: center;
   flex-flow: column nowrap;
   padding: 0;
   margin: 0;
   gap: 0.5rem;
-  background: linear-gradient(60deg, var(--blue-tertiary) 0%, var(--green-tertiary) 100%);
-  @media (min-width: 840px){
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-  @media (min-width: 1280px){
-    grid-template-columns: repeat(6,1fr);
-  }
+}
+
+.game-list-container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
 }
