--- a/frontend/src/app/shared/header/header.component.css
+++ b/frontend/src/app/shared/header/header.component.css
@@ -1,16 +1,25 @@
 .header {
   display: flex;
-  border: dashed red 1px;
-  background: salmon;
+  background: var(--blue-secondary);
   flex-flow: row nowrap;
   align-items: center;
+  height: 3rem;
+}
+
+.nav-menu {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .nav-button-container {
   display: flex;
+  height: 100%;
 }
 
 .nav-button {
+  height: 100%;
   width: 7rem;
   border: none;
   background: transparent;
@@ -20,10 +29,4 @@
   &:hover {
     background: rgba(255,255,255,0.5);
   }
-}
-
-.nav-menu {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
 }
